--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require": {
         "php": ">=8.0",
-        "laravel/framework": "^9.0 || ^10.0",
+        "laravel/framework": "^9.0 || ^10.0 || ^11.0 || ^12.0",
         "laravel/helpers": "^1.1"
     },
     "require-dev": {
